[package]
name = "blocking-threadpool"
version = "1.0.2"

edition = "2021"
rust-version = "1.56.1"

authors = [
        "The Rust Project Developers",
        "Corey Farwell <coreyf@rwell.org>",
        "Stefan Schindler <dns2utf8@estada.ch>",
        "Steve Smith <tarkasteve@gmail.com>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tarka/blocking-threadpool"
homepage = "https://github.com/tarka/blocking-threadpool"
documentation = "https://docs.rs/blocking-threadpool"
description = """
A thread pool for running a number of jobs on a fixed set of worker threads.
"""
keywords = ["threadpool", "thread", "pool", "threading", "parallelism"]
categories = ["concurrency", "os"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "CHANGES.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
num_cpus = "1.16"
crossbeam-channel = "0.5"
